# lfg-opensource

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  infer.py  pyproject.toml  requirements.txt  web.py
Pi3/: __init__.py
Pi3/pi3/: __init__.py
Pi3/pi3/models/: __init__.py  pi3.py
Pi3/pi3/models/dinov2/hub/: backbones.py  utils.py
Pi3/pi3/models/dinov2/models/: __init__.py
Pi3/pi3/models/layers/: __init__.py  autoregressive_transformer.py  camera_head.py  conv_point_head.py  pos_embed.py  refined_point_head.py  simple_positional_encoding.py  transformer_head.py
Pi3/pi3/utils/: __init__.py
lfg/: __init__.py  checkpoint.py  cli.py  config.py  inference.py  io.py  model.py  paths.py  visualization.py  web.py
tests/: test_lfg_utils.py
