[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lfg-opensource"
version = "0.1.0"
description = "Open-source local inference for LFG"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "torch>=2.4",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "yacs>=0.1.8",
]

[project.scripts]
lfg-infer = "lfg.cli:main"

[tool.setuptools]
packages = {find = {include = ["lfg*", "Pi3*"]}}
